objects/Passbook_Logs__c.object
<CustomObject>
    <description>This object captures logs for passbook integration</description>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Passbook Logs</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Passbook Logs</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Passbook Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>